--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ header {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   font-family: 'Playfair Display SC', sans-serif;
   text-align: center;
+  font-size: 64px;
 }
 
 /* typography */
@@ -56,7 +57,31 @@ table {
   text-overflow: ellipsis;
 }
 
+input {
+  width: 100%;
+}
+
 /* Column Size for thead */
 
+tbody > tr:nth-child(odd) {
+  background-color: #fff0cf;
+}
+
+td, th {
+  width: 10%;
+}
 
 /* Column size for tbody */
+
+th:nth-child(4),
+th:nth-child(5),
+td:nth-child(4),
+td:nth-child(5) {
+  width: 30%;
+}
+
+img {
+  object-fit: scale-down;
+  width: 100%;
+  height: 100%;
+}
